<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <name>Fixed Format for Java</name>
  <groupId>com.ancientprogramming.fixedformat4j</groupId>

  <version>1.9.0-SNAPSHOT</version>
  <artifactId>fixedformat4j</artifactId>
  <packaging>jar</packaging>

  <inceptionYear>2008</inceptionYear>
  <organization>
    <name>Eyben Consult</name>
    <url>https://eybenconsult.com</url>
  </organization>
  <description>
    <![CDATA[Fixedformat4j is intended to be an easy to use, small and non intrusive Java framework for working with
    flat fixed formatted text files. By annotating your code you can setup the offsets and format as for your data when
    reading/writing to and from flat fixed format files.]]>
  </description>
  <url>https://eybenconsult.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/jeyben/fixedformat4j/issues</url>
  </issueManagement>

  <scm>
    <connection>scm:git:https://github.com/jeyben/fixedformat4j.git</connection>
    <developerConnection>scm:git:git@github.com:jeyben/fixedformat4j.git</developerConnection>
    <url>https://github.com/jeyben/fixedformat4j/tree/master/fixedformat4j</url>
    <tag>HEAD</tag>
  </scm>

  <developers>
    <developer>
      <name>Jacob von Eyben</name>
      <id>jeyben</id>
      <email>jacobvoneyben@gmail.com</email>
      <organization/>
      <organizationUrl/>
      <url>https://eybenconsult.com</url>
      <timezone>2</timezone>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
  </developers>

  <dependencies>
    <!-- Library API only — consumers choose their own SLF4J backend -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.17</version>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.46</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.13.4</version>
      <scope>test</scope>
    </dependency>

    <!-- Logback as SLF4J backend for tests — enables ListAppender for log capture -->
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.5.32</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <mailingLists>
    <mailingList>
      <name>Fixedformat4j User List</name>
      <post>fixedformat4j-user-list@googlegroups.com</post>
      <unsubscribe>fixedformat4j-user-list+unsubscribe@googlegroups.com</unsubscribe>
      <subscribe>http://groups.google.com/group/fixedformat4j-user-list/subscribe</subscribe>
      <archive>http://groups.google.com/group/fixedformat4j-user-list/topics?gvc=2</archive>
    </mailingList>
  </mailingLists>

  <build>
    <defaultGoal>install</defaultGoal>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.5</version>
      </plugin>
      <plugin>
        <groupId>org.pitest</groupId>
        <artifactId>pitest-maven</artifactId>
        <version>1.23.1</version>
        <configuration>
          <targetClasses>
            <param>com.ancientprogramming.fixedformat4j.*</param>
          </targetClasses>
          <targetTests>
            <param>com.ancientprogramming.fixedformat4j.*</param>
          </targetTests>
          <outputFormats>
            <outputFormat>HTML</outputFormat>
            <outputFormat>XML</outputFormat>
          </outputFormats>
          <mutators>
            <mutator>ALL</mutator>
          </mutators>
          <timestampedReports>false</timestampedReports>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.pitest</groupId>
            <artifactId>pitest-junit5-plugin</artifactId>
            <version>1.2.3</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
        <configuration>
          <release>11</release>
          <encoding>UTF-8</encoding>
          <debug>true</debug>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>1.18.46</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <descriptorRefs>
            <descriptorRef>bin</descriptorRef>
            <descriptorRef>src</descriptorRef>
          </descriptorRefs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.4.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.10.0</version>
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>central</publishingServerId>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.12.0</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals><goal>jar</goal></goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.2.8</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals><goal>sign</goal></goals>
                <configuration>
                  <gpgArguments>
                    <arg>--pinentry-mode</arg>
                    <arg>loopback</arg>
                  </gpgArguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
      </plugin>
    </plugins>
  </reporting>
</project>




